syntax = "proto3";

package users;

option go_package = "./proto;users";

service Users {
    rpc Create(CreateRequest) returns (CreateResponse) {};
    rpc Read(ReadRequest) returns (ReadResponse) {};
    rpc Update(UpdateRequest) returns (UpdateResponse) {};
    rpc Delete(DeleteRequest) returns (DeleteResponse) {};
    rpc List(ListRequest) returns (ListResponse) {};
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message CreateRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message CreateResponse {
    User user = 1;
}

message ReadRequest {
    string id = 1;
}

message ReadResponse {
    User user = 1;
}

message UpdateRequest {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UpdateResponse {
    User user = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {}

message ListRequest {
    int32 page = 1;
    int32 limit= 2;
}
message ListResponse {
    repeated User users = 1;
    int32 total = 2;
}